[package]
name = "blksocks"
version = "1.2.0"
edition = "2021"
authors = ["Hugo Wang <whgking@gmail.com>"]
description = "A transparent TCP redirector."
repository = "https://github.com/mitnk/blksocks"
keywords = ["tproxy", "linux"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
flexi_logger = "0.29"
log = "0.4"
nix = { version = "0.29", features = ["socket", "process", "net"] }
serde = "1.0"
serde_derive = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
